--- a/styles/index.css
+++ b/styles/index.css
@@ -12,7 +12,7 @@ h1{
 }
 
  img{
-    background-image: url(./../assets/download.webp);
+    background-image: url(./../assets/vestrahorn-mountains-stokksnes-iceland.jpg);
     width: 100%;
     height: 100vh;
     position: absolute;
@@ -20,7 +20,6 @@ h1{
 
 
 main .tudo{
-    box-shadow:  0 0 30px black;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -30,13 +29,13 @@ main .tudo{
     color: black;
 }
 main input{
-    box-shadow:  0 0 30px black;
+    
     background-color: transparent;
     padding: 12px;
     border: none;
     outline: none;
     font-size: 19px;
-    border-radius: 10px;
+    border-bottom: 2px solid white;
 }
 main button{
     background-color: rgba(64, 228, 64, 0.452);
@@ -55,7 +54,7 @@ main button:hover{
 }
 
 main h1:hover{
-    color: rgb(233, 49, 80);
+    color: white;
 
 }
 
